<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/textView_main_enterTaskTitle"
        style="@style/main_textView"
        android:text="@string/all_enterTaskTitle"/>
    <EditText
        android:id="@+id/editText_main_title"
        style="@style/main_editText"
        android:layout_below="@id/textView_main_enterTaskTitle"
        android:inputType="text"
        android:hint="@string/all_taskTitleHint"/>
    <TextView
        android:id="@+id/textView_main_enterTaskSummary"
        style="@style/main_textView"
        android:layout_below="@id/editText_main_title"

        android:text="@string/all_enterTaskSummary"/>
    <EditText
        android:id="@+id/editText_main_summary"
        android:layout_below="@id/textView_main_enterTaskSummary"
        style="@style/main_editText"
        android:inputType="text"
        android:hint="@string/all_taskSummaryHint"/>
    <TextView
        android:id="@+id/textView_main_enterTaskImportance"
        style="@style/main_textView"
        android:layout_below="@id/editText_main_summary"
        android:text="@string/all_enterTaskImportance"/>
    <EditText
        android:id="@+id/editText_main_importance"
        android:layout_below="@id/textView_main_enterTaskImportance"
        style="@style/main_editText"
        android:inputType="number"
        android:hint="@string/all_taskImportanceHint"/>
    <Button
        android:id="@+id/button_main_save"
        style="@style/main_button"
        android:layout_below="@id/editText_main_importance"
        android:text="@string/all_saveTask"
        android:onClick="saveTask"/>

    <ScrollView
        style="@style/main_scrollView"
        android:layout_below="@id/button_main_save">
        <TextView
            android:id="@+id/textView_main_noTasksMassage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_noTasksMassage"/>
    </ScrollView>
</RelativeLayout>